--- a/PogoPlug/PogoTest.html
+++ b/PogoPlug/PogoTest.html
@@ -14,20 +14,27 @@
     <div class = "logo">
         <img src="http://pogoplug.com/images_5_0/logo-white-small.png"/>
     </div>
-        <div class = "set">
-            <ul class = "settings">
-                <li><img src = "http://pogoplug.com/images_5_0/head-ico-settings.png" />
-                    <ul class = dropDown>
-                        <li><strong>casecracker@me.com</strong></li>
-                        <li>Settings</li>
-                        <li>Account</li>
-                        <li>Download Software</li>
-                        <li>Help</li>
-                        <li>Sign Out</li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
+       <div class = "set">
+           <ul class = "navDropDown">
+               <li class="drop">
+                   <img src = "http://pogoplug.com/images_5_0/head-ico-settings.png" />
+                   <div class="dropdownContain">
+                       <div class="dropOut">
+                           <div class="triangle"></div>
+                           <ul class = "dropDown">
+                               <li><strong>casecracker@me.com</strong></li>
+                               <li>Settings</li>
+                               <li>Account</li>
+                               <li>Download Software</li>
+                               <li>Help</li>
+                               <li>Sign Out</li>
+                           </ul>
+                       </div>
+                   </div>
+
+               </li>
+           </ul>
+
     </div>
 </div>
 </body>
