--- a/PogoPlug/PogoTest.html
+++ b/PogoPlug/PogoTest.html
@@ -22,12 +22,12 @@
                        <div class="dropOut">
                            <div class="triangle"></div>
                            <ul class = "dropDown">
-                               <li><strong>casecracker@me.com</strong></li>
-                               <li>Settings</li>
-                               <li>Account</li>
-                               <li>Download Software</li>
-                               <li>Help</li>
-                               <li>Sign Out</li>
+                               <li class="dropList"><strong>casecracker@me.com</strong></li>
+                               <li class="dropList">Settings</li>
+                               <li class="dropList">Account</li>
+                               <li class="dropList">Download Software</li>
+                               <li class="dropList">Help</li>
+                               <li class="dropList">Sign Out</li>
                            </ul>
                        </div>
                    </div>
