--- a/PogoPlug/PogoTest.html
+++ b/PogoPlug/PogoTest.html
@@ -10,32 +10,60 @@
 
 </head>
 <body>
-<div class="header">
-    <div class = "logo">
-        <img src="http://pogoplug.com/images_5_0/logo-white-small.png"/>
-    </div>
-       <div class = "set">
-           <ul class = "navDropDown">
-               <li class="drop">
-                   <img src = "http://pogoplug.com/images_5_0/head-ico-settings.png" />
-                   <div class="dropdownContain">
-                       <div class="dropOut">
-                           <div class="triangle"></div>
-                           <ul class = "dropDown">
-                               <li class="dropList"><strong>casecracker@me.com</strong></li>
-                               <li class="dropList">Settings</li>
-                               <li class="dropList">Account</li>
-                               <li class="dropList">Download Software</li>
-                               <li class="dropList">Help</li>
-                               <li class="dropList">Sign Out</li>
-                           </ul>
+<header>
+    <div class="topHead">
+        <div class = "logo">
+            <img src="http://pogoplug.com/images_5_0/logo-white-small.png"/>
+        </div>
+           <div class = "set">
+               <ul class = "navDropDown">
+                   <li class="drop">
+                       <img src = "http://pogoplug.com/images_5_0/head-ico-settings.png" />
+                       <div class="dropdownContain">
+                           <div class="dropOut">
+                               <div class="triangle"></div>
+                               <ul class = "dropDown">
+                                   <li class="dropList"><strong>casecracker@me.com</strong></li>
+                                   <li class="dropList">Settings</li>
+                                   <li class="dropList">Account</li>
+                                   <li class="dropList">Download Software</li>
+                                   <li class="dropList">Help</li>
+                                   <li class="dropList">Sign Out</li>
+                               </ul>
+                           </div>
                        </div>
-                   </div>
 
-               </li>
-           </ul>
+                   </li>
+               </ul>
+         </div>
+   </div>
+</header>
+<div class = "contentWrap line">
+    <aside class = "mediaBar size1of4 unit">
+        <div class = "searchBox">
+           <input type="text" style ="width: 196px">
+            <div class = "mediaList">
+                <ul>
+                    <li>File Explorer</li>
+                    <li>Photo Gallery</li>
+                    <li>Music Player</li>
+                    <li>Video Gallery</li>
+                </ul>
+            </div>
+        </div>
+    </aside>
+        <section class = "files size3of4 lastUnit">
+            <div class = "filesHead">
+                <div class = "topBar">
+                </div>
+                    <div class = "bottomBar">
 
-    </div>
+                    </div>
+            </div>
+        </section>
 </div>
+<footer>
+
+</footer>
 </body>
 </html>
