Some more work on the Mac.

--- a/PogoPlug/PogoTest.html
+++ b/PogoPlug/PogoTest.html
@@ -40,9 +40,8 @@
 </header>
 <div class = "contentWrap line">
     <aside class = "mediaBar size1of4 unit">
-        <div class = "searchBox">
-            <input type="text" style ="width: 196px">
-            <div class = "mediaList">
+            <div class="colButton"></div><input class="search size3of4" type="text">
+            <div class = "mediaList size3of4">
                 <ul>
                     <li>File Explorer</li>
                     <li>Photo Gallery</li>
@@ -50,7 +49,6 @@
                     <li>Video Gallery</li>
                 </ul>
             </div>
-        </div>
     </aside>
     <section class = "files size3of4 lastUnit">
         <div class = "filesHead">
